--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Titulo -->
     <title>Juan Rodriguez</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="../assets/images/icono.png" />
+    <link rel="icon" type="image/x-icon" href="assets/images/icono.png" />
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -27,7 +27,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
     <!-- CSS -->
-    <link href="../assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Barra de navegacion -->
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="navbar-toggler">
           <a class="navbar-brand" href="#">
             <img
-              src="../assets/images/icono.png"
+              src="assets/images/icono.png"
               width="50"
               alt="Logo de la página web"
             />
@@ -76,7 +76,7 @@
     <section class="hero-section align-items-stretch" id="hero-section">
       <div class="hero-principal">
         <img
-          src="../assets/images/profile.jpg"
+          src="assets/images/profile.jpg"
           alt="Profile pic"
           class="profile-pic"
         />
@@ -86,7 +86,7 @@
       <div class="hero-secundario">
         <img
           class="img-hero"
-          src="../assets/images/hero-inferior.svg"
+          src="assets/images/hero-inferior.svg"
           alt="Img hero"
         />
       </div>
