--- a/index.html
+++ b/index.html
@@ -106,17 +106,31 @@
             which has honed my excellent communication skills.</p>
       </div>
     </section>
-
-    <section class="skills-section" id="skills-section"></section>
-    <section
-      class="clear-section projects-section"
-      id="projects-section"
-    ></section>
-    <section class="studies-section" id="studies-section"></section>
-    <section
-      class="clear-section contact-section"
-      id="contact-section"
-    ></section>
+    <!-- Skills -->
+    <section class="skills-section" id="skills-section">
+      <div class="container text-center">
+        <div class="row">
+          <!-- Front-End -->
+          <div class="col-12 col-md-4">
+            <h3 class="titulo-card">Front-End</h3>
+          </div>
+          <!-- Back-End -->
+          <div class="col-12 col-md-4">
+            <h3 class="titulo-card">Back-End</h3>
+          </div>
+          <!-- Learning -->
+          <div class="col-12 col-md-4">
+            <h3 class="titulo-card">Learning</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Projects -->
+    <section class="clear-section projects-section" id="projects-section"></section>
+    <!-- Studies 
+    <section class="studies-section" id="studies-section"></section> -->
+    <section class="clear-section contact-section" id="contact-section"></section>
+    <!-- Footer -->
     <footer
       class="section-container d-flex flex-column align-items-center justify-content-center"
     ></footer>
