Finished Skills Section

--- a/index.html
+++ b/index.html
@@ -111,16 +111,40 @@
       <div class="container text-center">
         <div class="row">
           <!-- Front-End -->
-          <div class="col-12 col-md-4">
+          <div class="columna col-12 col-md-4">
+            <i class="bi bi-laptop skill-icon"></i>
             <h3 class="titulo-card">Front-End</h3>
-          </div>
+            <p class="section-text">These are the technologies that I understand.</p>
+            <div class="badge-container">
+              <span class="badge text-bg-primary">HTML</span>
+              <span class="badge text-bg-primary">CSS</span>
+              <span class="badge text-bg-primary">JavaScript</span>
+              <span class="badge text-bg-primary">Bootstrap</span>
+            </div>
+          </div>`
           <!-- Back-End -->
-          <div class="col-12 col-md-4">
+          <div class="columna col-12 col-md-4">
+            <i class="bi bi-tools skill-icon"></i>
             <h3 class="titulo-card">Back-End</h3>
+            <p class="section-text">These are the technologies that I understand.</p>
+            <div class="badge-container">
+              <span class="badge text-bg-primary">Python</span>
+              <span class="badge text-bg-primary">Django</span>
+              <span class="badge text-bg-primary">Flask</span>
+              <span class="badge text-bg-primary">SQLite3</span>
+            </div>
           </div>
           <!-- Learning -->
-          <div class="col-12 col-md-4">
+          <div class="columna col-12 col-md-4">
+            <i class="bi bi-book skill-icon"></i>
             <h3 class="titulo-card">Learning</h3>
+            <p class="section-text">These are the technologies that I'm learning.</p>
+            <div class="badge-container">
+              <span class="badge text-bg-primary">Figma</span>
+              <span class="badge text-bg-primary">React</span>
+              <span class="badge text-bg-primary">AWS</span>
+              <span class="badge text-bg-primary">PostgreSQL</span>
+            </div>
           </div>
         </div>
       </div>
