--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <!-- Skills -->
     <section class="skills-section" id="skills-section">
       <div class="container text-center">
+        <h2 class="tittle-section">About me</h2>
         <div class="row">
           <!-- Front-End -->
           <div class="columna col-12 col-md-4">
@@ -150,14 +151,105 @@
       </div>
     </section>
     <!-- Projects -->
-    <section class="clear-section projects-section" id="projects-section"></section>
+    <section class="dark-section projects-section" id="projects-section">
+      <div class="contenedor project-container text-center">
+        <h2 class="tittle-section">Projects</h2>
+        <p class="section-text mb-5 text-center"> Here are some of my recent projects, if you want to know more about them, please read the <span class="yellow">Readme.md</span> file in the repository</p>
+        <div class="row p-5">
+          <!-- Project 1 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img class="proy-img" src="assets/images/Project1.png" alt="">
+              <div class="overlay">
+                <p>Project 1</p>
+                <div class="iconos-contenedor">
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 2 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img class="proy-img" src="assets/images/project2.png" alt="">
+              <div class="overlay">
+                <p>Project 2</p>
+                <div class="iconos-contenedor">
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 3 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img class="proy-img" src="assets/images/project6.png" alt="">
+              <div class="overlay">
+                <p>Project 3</p>
+                <div class="iconos-contenedor">
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 4 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img class="proy-img" src="assets/images/project3.png" alt="">
+              <div class="overlay">
+                <p>Project 4</p>
+                <div class="iconos-contenedor">
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 5 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img class="proy-img" src="assets/images/project4.png" alt="">
+              <div class="overlay">
+                <p>Project 5</p>
+                <div class="iconos-contenedor">
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 6 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img class="proy-img" src="assets/images/project5.png" alt="">
+              <div class="overlay">
+                <p>Project 6</p>
+                <div class="iconos-contenedor">
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Studies 
     <section class="studies-section" id="studies-section"></section> -->
     <section class="clear-section contact-section" id="contact-section"></section>
     <!-- Footer -->
-    <footer
-      class="section-container d-flex flex-column align-items-center justify-content-center"
-    ></footer>
+    <section
+      class="dark-section d-flex flex-column align-items-center justify-content-center"
+    ></section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
