--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="project">
               <img class="proy-img" src="assets/images/project3.png" alt="">
               <div class="overlay">
-                <p>Project 4</p>
+                <p>CS50 X</p>
                 <div class="iconos-contenedor">
                   <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
@@ -217,7 +217,7 @@
             <div class="project">
               <img class="proy-img" src="assets/images/project4.png" alt="">
               <div class="overlay">
-                <p>Project 5</p>
+                <p>CS50 P</p>
                 <div class="iconos-contenedor">
                   <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
@@ -231,7 +231,7 @@
             <div class="project">
               <img class="proy-img" src="assets/images/project5.png" alt="">
               <div class="overlay">
-                <p>Project 6</p>
+                <p>CS50 Web</p>
                 <div class="iconos-contenedor">
                   <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
