--- a/index.html
+++ b/index.html
@@ -241,15 +241,40 @@
             </div>
           </div>
         </div>
+        <!-- Boton mas proyectos -->
       </div>
     </section>
     <!-- Studies 
     <section class="studies-section" id="studies-section"></section> -->
-    <section class="clear-section contact-section" id="contact-section"></section>
-    <!-- Footer -->
-    <section
-      class="dark-section d-flex flex-column align-items-center justify-content-center"
-    ></section>
+    <section class="clear-section contact-section" id="contact-section">
+      <div class="rectangulo">
+        <h2 class="tittle-section">Lets Talk!</h2>
+        <p class="section-text">Tell me about your vision!</p>
+        <a href="mailto:juanbrodriguezdb@protonmail.com"><button type="button" class="btn btn-primary btn-contact">Send me a Email! <i class="bi bi-envelope"></i></button></a>
+      </div>
+      <div class="container-fluid dark-section pie">
+        <img class="footer-logo" src="assets/images/icono-blanco.svg" alt="Logo del portafolio">
+        <div class="derechos-de-autor">Created by Juan Rodriguez (2023) &#169;</div>
+        <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+          <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-twitter"></i>
+          </a>
+          <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-linkedin"></i>
+          </a>
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-instagram"></i>
+          </a>
+          <a href="mailto:juanbrodriguezdb@gmail.com" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-envelope"></i>
+          </a>
+          </div>
+      </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
