--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <p class="section-text">Tell me about your vision!</p>
         <a href="mailto:juanbrodriguezdb@protonmail.com"><button type="button" class="btn btn-primary btn-contact">Send me a Email! <i class="bi bi-envelope"></i></button></a>
       </div>
-      <div class="container-fluid dark-section pie">
+      <div class="container-fluid dark-section pie pt-5">
         <img class="footer-logo" src="assets/images/icono-blanco.svg" alt="Logo del portafolio">
         <div class="derechos-de-autor">Created by Juan Rodriguez (2023) &#169;</div>
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
