--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
             class="navbar-nav d-flex justify-content-center align-items-center"
           >
             <li class="nav-item">
-              <a class="nav-link" href="#sobre-mi">About me</a>
+              <a class="nav-link" href="#about-section">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#proyectos">Skills</a>
+              <a class="nav-link" href="#skills-section">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#testimonios">Projects</a>
+              <a class="nav-link" href="#projects-section">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contacto">Contact</a>
+              <a class="nav-link" href="#contact-section">Contact</a>
             </li>
           </ul>
         </div>
