Full working page

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
               <div class="overlay">
                 <p>Project 1</p>
                 <div class="iconos-contenedor">
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="https://github.com/juanb021/PROJECTS/tree/main/web-pages/cs-fyi" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="/WEB-PAGE/Templates/fyi/index.html" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
                 </div>
               </div>
@@ -177,8 +177,8 @@
               <div class="overlay">
                 <p>Project 2</p>
                 <div class="iconos-contenedor">
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="https://github.com/juanb021/PROJECTS/tree/main/web-pages/writtings" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="/WEB-PAGE/Templates/writtings/index.html" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
                 </div>
               </div>
@@ -191,7 +191,7 @@
               <div class="overlay">
                 <p>Project 3</p>
                 <div class="iconos-contenedor">
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="https://github.com/juanb021/WEB-PAGE" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
                 </div>
@@ -205,9 +205,8 @@
               <div class="overlay">
                 <p>CS50 X</p>
                 <div class="iconos-contenedor">
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
-                  <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
+                  <a href="https://github.com/juanb021/CS50-X" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="https://cs50.harvard.edu/certificates/2b7fb6ae-a68a-4ec0-8f8f-ed09eb0895a4" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
                 </div>
               </div>
             </div>
@@ -219,9 +218,8 @@
               <div class="overlay">
                 <p>CS50 P</p>
                 <div class="iconos-contenedor">
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
-                  <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
+                  <a href="https://github.com/juanb021/CS50-P" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="https://cs50.harvard.edu/certificates/851c96c5-f430-4476-a57f-e3c723ea88fa" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
                 </div>
               </div>
             </div>
@@ -233,9 +231,8 @@
               <div class="overlay">
                 <p>CS50 Web</p>
                 <div class="iconos-contenedor">
-                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="https://github.com/juanb021/CS50-W" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
-                  <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
                 </div>
               </div>
             </div>
