--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
               <div class="overlay">
                 <p>Project 1</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/juanb021/PROJECTS/tree/main/web-pages/cs-fyi" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                  <a href="/WEB-PAGE/Templates/fyi/index.html" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="https://github.com/juanb021/CS-FYI" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="https://cs-fyi-jb.netlify.app" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
                 </div>
               </div>
@@ -177,8 +177,8 @@
               <div class="overlay">
                 <p>Project 2</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/juanb021/PROJECTS/tree/main/web-pages/writtings" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                  <a href="/WEB-PAGE/Templates/writtings/index.html" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
+                  <a href="https://github.com/juanb021/WRITTINGS" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="https://writtings-jb.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="bi bi-globe"></i></i></a>
                   <a href="#" target="_blank" rel="noopener noreferrer" hidden><i class="bi bi-youtube"></i></i></i></a>
                 </div>
               </div>
